CDE-2603 Retired warning shows merge link
